--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
                 <div class="title"><span id="title" id="debug">Home</span></div>
             </div>
 
-            <div class="stackHorizontal">
+            <div id="buttonsMaster" class="stackHorizontal">
+                <div class="button"><i class="fa fa-plus" aria-hidden="true"></i></div>
+                <div class="button accent"><i class="fa fa-trash-o" aria-hidden="true"></i></div>
+            </div>
+
+            <div id="buttonsDetails" class="stackHorizontal">
                 <div class="button"><i class="fa fa-plus" aria-hidden="true"></i></div>
                 <div class="button accent"><i class="fa fa-trash-o" aria-hidden="true"></i></div>
             </div>
@@ -149,9 +154,6 @@
 
             <div class="details">
                 <table class="flatTable">
-                    <caption>
-                        21/08/2017
-                    </caption>
                     <tr class="headingTr">
                         <td class="tdSmall">STATO</td>
                         <td>OGGETTO</td>
@@ -247,70 +249,70 @@
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <script>
         /*
-                                                        var config = {
-                                                            apiKey: "AIzaSyD2Amywjsz8FWQ52tX6R-eJDbSXmt6bDvo",
-                                                            authDomain: "shoptrack-658c5.firebaseapp.com",
-                                                            databaseURL: "https://shoptrack-658c5.firebaseio.com",
-                                                            projectId: "shoptrack-658c5",
-                                                            storageBucket: "shoptrack-658c5.appspot.com",
-                                                            messagingSenderId: "123504057587"
-                                                            };
+                                                                var config = {
+                                                                    apiKey: "AIzaSyD2Amywjsz8FWQ52tX6R-eJDbSXmt6bDvo",
+                                                                    authDomain: "shoptrack-658c5.firebaseapp.com",
+                                                                    databaseURL: "https://shoptrack-658c5.firebaseio.com",
+                                                                    projectId: "shoptrack-658c5",
+                                                                    storageBucket: "shoptrack-658c5.appspot.com",
+                                                                    messagingSenderId: "123504057587"
+                                                                    };
 
-                                                        firebase.initializeApp(config);
+                                                                firebase.initializeApp(config);
 
-                                                        var orders = firebase.database().ref('orders');
+                                                                var orders = firebase.database().ref('orders');
 
-                                                        orders.on("value", function(snapshot) {
-                                                            var data = snapshot.val();
-                                                            var list = [];
-                                                            console.log(data);
-                                                            console.log("-----");
-                                                            for (var key in data) {
-                                                                console.log(key);
+                                                                orders.on("value", function(snapshot) {
+                                                                    var data = snapshot.val();
+                                                                    var list = [];
+                                                                    console.log(data);
+                                                                    console.log("-----");
+                                                                    for (var key in data) {
+                                                                        console.log(key);
 
-                                                                if (data.hasOwnProperty(key)) {
-                                                                    list.push({
-                                                                        key: key,
-                                                                        store: getStore(data[key].Store),
-                                                                        date: data[key].Date,
-                                                                        datePrev: data[key].DatePrev
-                                                                    })
+                                                                        if (data.hasOwnProperty(key)) {
+                                                                            list.push({
+                                                                                key: key,
+                                                                                store: getStore(data[key].Store),
+                                                                                date: data[key].Date,
+                                                                                datePrev: data[key].DatePrev
+                                                                            })
+                                                                        }
+                                                                    }
+
+                                                                    console.log(list);
+
+                                                                    // refresh the UI
+                                                                    var lis = '';
+                                                                    for (var i = 0; i < list.length; i++) {
+                                                                        lis += createElement(list[i]);
+                                                                    };
+                                                                    document.getElementById('orders').innerHTML = lis;
+                                                                });
+
+
+                                                                function getStore(id) {
+                                                                    switch(id){
+                                                                        case 0: return "Aliexpress"; break;
+                                                                        case 1: return "Gearbest"; break;
+                                                                        case 2: return "Amazon"; break;
+                                                                        case 3: return "eBay"; break;
+                                                                        case 4: return "Girada"; break;
+                                                                        default: return "NoStore";
+                                                                    }
                                                                 }
-                                                            }
-
-                                                            console.log(list);
-
-                                                            // refresh the UI
-                                                            var lis = '';
-                                                            for (var i = 0; i < list.length; i++) {
-                                                                lis += createElement(list[i]);
-                                                            };
-                                                            document.getElementById('orders').innerHTML = lis;
-                                                        });
 
 
-                                                        function getStore(id) {
-                                                            switch(id){
-                                                                case 0: return "Aliexpress"; break;
-                                                                case 1: return "Gearbest"; break;
-                                                                case 2: return "Amazon"; break;
-                                                                case 3: return "eBay"; break;
-                                                                case 4: return "Girada"; break;
-                                                                default: return "NoStore";
-                                                            }
-                                                        }
+                                                                function createElement(element){
+                                                                    var lis = "<li><div class='topMenu'>";
+                                                                    lis += "<div> " + element.key + " </div>";
+                                                                    lis += "<div> | " + element.store + " </div>";
+                                                                    lis += "<div class='title'> | " + element.date + " - " + element.datePrev + "</div>";
+                                                                    lis += "<div> | 0,00€  </div>";
+                                                                    lis += "</div></li>";
 
-
-                                                        function createElement(element){
-                                                            var lis = "<li><div class='topMenu'>";
-                                                            lis += "<div> " + element.key + " </div>";
-                                                            lis += "<div> | " + element.store + " </div>";
-                                                            lis += "<div class='title'> | " + element.date + " - " + element.datePrev + "</div>";
-                                                            lis += "<div> | 0,00€  </div>";
-                                                            lis += "</div></li>";
-
-                                                            return lis;
-                                                        }*/
+                                                                    return lis;
+                                                                }*/
     </script>
 </body>
 
