--- a/login/index.html
+++ b/login/index.html
@@ -10,18 +10,21 @@
         <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
         <link rel="stylesheet" href="style.css">
 
+        <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+        <script src="scripts/FirebaseScript.js"></script>
+
     </head>
     <body>
         <section id="Background">
             <h3 class="logo">Shop Track</h3>
             <div>
-                <button id="btnSignIn" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Shop Track </button>
+                <button id="btnSignIn" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect" onclick="SignIn()"><i class="material-icons">account_circle</i> Shop Track </button>
                 <button id="btnSignIn" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Google </button>
                 <button id="btnSignIn" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Facebook </button>
             </div>
             </br></br>
             <div id="DivMargin">
-                    <a href="#">Sei nuovo? Registrati è GRATIS!</a>
+                    <a onclick="SignUp()">Sei nuovo? Registrati è GRATIS!</a>
             </div>
         </section>
     </body>
