--- a/login/index.html
+++ b/login/index.html
@@ -15,12 +15,13 @@
 
     </head>
     <body>
-        <section id="Background">
+        <section id="LoginForm">
             <h3 class="logo">Shop Track</h3>
             <div>
                 <button id="btnSignIn" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect" onclick="SignIn()"><i class="material-icons">account_circle</i> Shop Track </button>
                 <button id="btnSignIn" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Google </button>
                 <button id="btnSignIn" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Facebook </button>
+                <button id="btnLogOut" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect" onclick="LogOut()"><i class="material-icons">account_circle</i> Log Out </button>
             </div>
             </br></br>
             <div id="DivMargin">
