Fixed UI inconsistence

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
 
-        <div id="content" class="content stackHorizontal">
+        <div id="content" class="content">
 
 
             <table id="mainTable" class="flatTable master">
